# kdiff

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bloom_filter.hpp  main.cpp
example/: case.lst  case_1.fq  case_2.fq  control.lst  control_1.fq  control_2.fq  reference.fa
scripts/: analysis.sh  plot.py
